# cerpi

./: .gitignore  README.md
DisplayImage/: DisplayImage.cpp  bar  readme.txt
SmartCam/: SmartCam.cbp  SmartCam.cpp  SmartCam.depend  SmartCam.layout  bar  ce_io.cpp  ce_io.h
actuator/: ce_i2c.h  ce_pca9685.h  ce_stepper.h  dc-motor-bar.sh  dc-motor.cpp  servo-motor-bar.sh  servo-motor.cpp  stepper-driver-bar.sh  stepper-driver.cpp  stepper-motor-bar.sh  stepper-motor.cpp
basics/: eg.cpp
bus/: ce_spi.h  i2c-pwm-bar.sh  i2c-pwm.cpp  i2c_aio.cpp  i2cao-bar.sh  i2cao.cpp  i2cgyro-bar.sh  i2cgyro.cpp  spiai-bar.sh  spiai.cpp  spigyro-bar.sh  spigyro.cpp  spitest.c
bus/ads1115/: ads1115.cpp  ce_i2c.cpp  ce_i2c.h
bus/gpiodeg/: CMakeLists.txt  gpiod_eg.cpp
bus/pca9535_cei2c/: CMakeLists.txt  pca9535_cei2c.sh
bus/pca9535_i2c/: pca9535_i2c.cpp  pca9535_i2c.sh
io/: ce_io.h  gpiomain-bar.sh  gpiomain.cpp  lightswitch-bar.sh  lightswitch.cpp  wio-bar.sh  wio.cpp  wpwm-bar.sh  wpwm.cpp
iot/: ce_wx_tcp_client.cpp  ce_wx_tcp_server.cpp  ce_wx_udp.cpp  d3bar.php  emailbody.txt  gchart.htm  myarr.php  readsensor.cpp  sendemail.cpp
iot/cpprest/GUI_Client/: CMakeLists.txt  GUI_Client.cpp
iot/cpprest/GUI_Client/GUI_Client/: GUI_Client.sln  GUI_Client.vcxproj  GUI_Client.vcxproj.filters
iot/cpprest/postClient/: CMakeLists.txt  j2.php  postClient.cpp
iot/cpprest/svrRest/: CMakeLists.txt  svrRest.cpp
iot/json/wxJsonTest/: jsonval.cpp
mysql/: con11test-bar.sh  jdbc_test-bar.sh  mysqltest-bar.sh
opencv/: CMakeLists.txt  RaspiCam-CMakeLists.txt  ce_capture.c  ce_capture.sh  ce_capture_bmp.c  ce_capture_bmp.sh  disp-bar.sh  disp-readme.txt  disp.cpp  facedetection.cpp  raspicamcv.cpp  surveillance-bar.sh  surveillance.cpp  video-capture.cpp  yancapture.c  yancapture.sh
opencv/barcode/zintimg/: CMakeLists.txt  zintimg.cpp
raspicamcv/: raspicamcv.cpp
sensor/: accelerometer-i2c.cpp  accelerometer-spi.cpp  temperature-bar.sh  temperature.cpp
sensor-energy/: em-bar.sh  em.cpp  em.php  eseconds.php
serial/: SerialSimple-bar.sh  SerialSimple.cpp  ce_serial.h  wxserial.cpp
sys/cc1/: CMakeLists.txt  bar  cc1.cpp
sys/cc2/: CMakeLists.txt  bar  cc2.cpp
sys/cc3/: CMakeLists.txt  pi.cmake
sys/cedevdrv/: Makefile  cedevdrv.c
sys/ceiodev/: Makefile  ceiodev.c  ceiotest.cpp
sys/ceiofs/: Makefile  ceiofs.c
sys/simdrv/: Makefile  simdrv.c
time/: ce_watchdog.h  watchdog-bar.sh  watchdog.cpp
wx/: minimal.cpp  start_myapp.sh  wxcv-alpha-bar.sh  wxcv-alpha.cpp  wxcvsimple-bar.sh
(+10 files in other folders)
