cmake_minimum_required(VERSION 2.8)
project(cc3)
find_package(wxWidgets COMPONENTS core net base REQUIRED)
# find_package(OpenCV REQUIRED)
include("${wxWidgets_USE_FILE}")
# include_directories(${OpenCV_INCLUDE_DIR})
add_executable(cc3 cc3.cpp)
# target_link_libraries(${PROJECT_NAME} ${wxWidgets_LIBRARIES} ${OpenCV_LIBS})
target_link_libraries(${PROJECT_NAME} ${wxWidgets_LIBRARIES})
